Added Capybara tests

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,9 +3,9 @@
 one:
   name: One Example
   email: one@example.org
-  password_digest: MyString
+  password_digest: <%= default_password_digest %>
 
 two:
   name: Two Example
   email: two@example.org
-  password_digest: MyString
+  password_digest: <%= default_password_digest %>
