Fix for Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: ruby
 rvm:
-  - 2.1.2
+  - 2.1.1
 bundler_args: --without production
 before_script:
     - psql -c 'create database travis_ci_test;' -U postgres
+    - psql -c 'create database travis_ci_development;' -U postgres
     - cp config/database.travis.yml config/database.yml
