--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -1,13 +1,31 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
+  title: EMyString
   author: MyString
-  publish_year: 1
+  publish_year: 1990
   url: MyString
 
 two:
-  title: MyString
+  title: BMyString
   author: MyString
-  publish_year: 1
+  publish_year: 1995
+  url: MyString
+
+three:
+  title: DMyString
+  author: MyString
+  publish_year: 1970
+  url: MyString
+
+four:
+  title: CMyString
+  author: MyString
+  publish_year: 2014
+  url: MyString
+
+five:
+  title: AMyString
+  author: MyString
+  publish_year: 2001
   url: MyString
