Update Gemfile and database.yml

--- a/config/database.yml
+++ b/config/database.yml
@@ -66,6 +66,4 @@ test:
 #
 production:
   <<: *default
-  database: freeshelf_production
-  username: freeshelf
-  password: <%= ENV['FREESHELF_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
